--- a/backend_express/package.json
+++ b/backend_express/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -b && nodemon src/index.ts"
+    "dev": "tsc -b && nodemon src/index.ts",
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -12,16 +13,20 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/nodemon": "^1.19.6",
     "@types/ws": "^8.5.12",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
